whoops, forgot to add some files last time. cleanup, importing script

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,8 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-  <h1>Hello, {{ user.nickname }}!</h1>
-    {% for site in sites %}
-      <div><p>{{ site.house }} has a: <b>{{ site.tree.common_name }}</b><br />
-        Also known as: <em>{{ site.tree.genus_name }} {{ site.tree.species_name }}</em></p></div>
-    {% endfor %}
+  <h1>Street Trees of YVR</h1>
+    <div><p>Start <a href=search>here</a> to identfy the trees on your street</p></div>
 {% endblock %}
