--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-  <h1>Street Trees of YVR</h1>
-    <div><p>Start <a href=search>here</a> to identfy the trees on your street</p></div>
+<div class="jumbotron">
+  <div class="container-fluid">
+    <h1>Street Trees of YVR</h1>
+      <p>Start <a href=search>here</a> to identfy the trees on your street</p>
+    </div>
+  </div>
 {% endblock %}
