--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -1,20 +1,21 @@
 {% extends "base.html" %}
 
 {% block content %}
+  <div class="container-fluid">
   <h1>Find a House</h1>
   <form action="" method="get" name="search">
+    <div class="form-group">
       <p>
           Please enter the address:<br>
-          {{ form.number(size=10) }} {{ form.street(size=80) }}<br>
-          {% for error in form.street.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-          {% endfor %}<br>
+          {{ form.address(class_='form-control') }}<br>
       </p>
-      <p><input type="submit" value="Search"></p>
+      <p><button type="submit" class="btn btn-default">Search</button></p>
+      </div>
   </form>
   <div>
   {% for house in houses %}
     <p><a href="house/{{ house.id }}">{{ house.civicNumber }} {{ house.stdStreet }}</a></p>
   {% endfor %}
   </div>
+</div>
 {% endblock %}
