added the sorted address column to the house table in the db. changed the search function to created the sorted version of the street string and compare it to the sorted version in the db. turned off autocorrect on the search field

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -7,7 +7,7 @@
     <div class="form-group">
       <p>
           Please enter the address:<br>
-          {{ form.address(class_='form-control') }}<br>
+          {{ form.address(autocorrect='off', class_='form-control') }}<br>
       </p>
       <p><button type="submit" class="btn btn-default">Search</button></p>
       </div>
