--- a/app/static/css/trees.css
+++ b/app/static/css/trees.css
@@ -1,31 +1,40 @@
 .square {
-  width: 300px;
-  height: 300px;
+  width: 100%;
+  box-sizing: border-box;
+  background-color: #f5f5f5;
+  padding: 8px;
+}
+.inner-square {
+  width: 100%;
+  height: 0;
+  padding-top: 100%;
   box-sizing: border-box;
   position: relative;
-  border: 1px solid black;
+  background-color: #f5f5f5;
 }
 .house {
   width: 71.44%;
   height: 71.44%;
   box-sizing: border-box;
-  border: 1px solid black;
+  /*border: 1px solid black;*/
   position: absolute;
   top: 14.28%;
   left: 14.28%;
 }
 .cell {
-  border: 1px solid black;
   width: 14.28%;
   height: 14.28%;
   box-sizing: border-box;
   position: absolute;
 }
+.cell:nth-child(2) {
+  /*background: #CCFFCC;*/
+}
 .active {
   background: green;
 }
+
 .cell-1 {
-  background: #CCFFCC;
   top: 85.72%;
   left: 0;
 }
@@ -34,7 +43,6 @@
   left: 14.28%;
 }
 .cell-3 {
-  background: #CCFFCC;
   top: 85.72%;
   left: 28.56%;
 }
@@ -43,7 +51,6 @@
   left: 42.84%;
 }
 .cell-5 {
-  background: #CCFFCC;
   top: 85.72%;
   left: 57.12%;
 }
@@ -52,7 +59,6 @@
   left: 71.40%;
 }
 .cell-7 {
-  background: #CCFFCC;
   top: 85.72%;
   left: 85.68%;
 }
@@ -61,7 +67,6 @@
   left: 85.68%;
 }
 .cell-9 {
-  background: #CCFFCC;
   top: 57.12%;
   left: 85.68%;
 }
@@ -70,7 +75,6 @@
   left: 85.68%;
 }
 .cell-11 {
-  background: #CCFFCC;
   top: 28.56%;
   left: 85.68%;
 }
@@ -79,7 +83,6 @@
   left: 85.68%;
 }
 .cell-13 {
-  background: #CCFFCC;
   top: 0;
   left: 85.68%;
 }
@@ -88,7 +91,6 @@
   left: 71.40%;
 }
 .cell-15 {
-  background: #CCFFCC;
   top: 0;
   left: 57.12%;
 }
@@ -97,7 +99,6 @@
   left: 42.84%;
 }
 .cell-17 {
-  background: #CCFFCC;
   top: 0;
   left: 28.56%;
 }
@@ -106,7 +107,6 @@
   left: 14.28%;
 }
 .cell-19 {
-  background: #CCFFCC;
   top: 0;
   left: 0;
 }
@@ -115,7 +115,6 @@
   left: 0;
 }
 .cell-21 {
-  background: #CCFFCC;
   top: 28.56%;
   left: 0;
 }
@@ -124,11 +123,80 @@
   left: 0;
 }
 .cell-23 {
-  background: #CCFFCC;
   top: 57.12%;
   left: 0;
 }
 .cell-24 {
   top: 71.40%;
   left: 0;
+}
+
+.button {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.tree-icon {
+  background-image: url('/static/images/tree.svg');
+  background-size: 100%;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+.house-icon {
+  background-image: url('/static/images/house.svg');
+  background-size: 70%;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+.icon-before:before {
+  position: absolute;
+  top: -30px;
+  font-size: 4rem;
+  font-weight: 600;
+  font-family: 'Arial Rounded';
+  color: black;
+}
+.icon-next:before {
+  content: '>';
+  right: 0;
+}
+.icon-prev:before {
+  content: '<';
+  left: 0;
+}
+.hidden {
+  opacity: 0;
+}
+
+.description {
+  display: none;
+}
+
+.h1 {
+  font-size: 2.5rem;
+  font-weight: 400;
+}
+
+.nav-button {
+  display: block;
+  width: 42px;
+  height: 42px;
+  position: absolute;
+  top: 50%;
+}
+
+.nav-button_next {
+  right: -10px;
+  text-align: right;
+}
+.nav-button_prev {
+  left: -10px;
+  text-align: left;
+}
+
+.display {
+  position: relative;
 }
