--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -3,15 +3,8 @@
 {% block content %}
   <div class="container-fluid">
   <h1>Find a House</h1>
-  <form action="" method="get" name="search">
-    <div class="form-group">
-      <p>
-          Please enter the address:<br>
-          {{ form.address(autocorrect='off', class_='form-control') }}<br>
-      </p>
-      <p><button type="submit" class="btn btn-default">Search</button></p>
-      </div>
-  </form>
+  {% include 'search_bar.html' %}
+  
   <div>
   {% for house in houses %}
     <p><a href="house/{{ house.id }}">{{ house.civicNumber }} {{ house.stdStreet }}</a></p>
