--- a/app/templates/search_bar.html
+++ b/app/templates/search_bar.html
@@ -1,11 +1,10 @@
 {% block search %}
   <form action="/search" method="get" name="search">
-    <div class="form-group">
-      <p>
-          Please enter the address (include the street type):<br>
-          {{ form.address(autocorrect='off', class_='form-control') }}<br>
-      </p>
-      <p><button type="submit" class="btn btn-default">Search</button></p>
+    <div class="input-group">
+          {{ form.address(autocorrect='off', class_='form-control', placeholder="Search for an address") }}
+          <span class="input-group-btn">
+            <button class="btn btn-default" type="submit">Search</button>
+          </span>
       </div>
   </form>
 {% endblock %}
